# Learn_BSDiff_Sample

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/cn/bsd/learn/bsdiff/sample/: MainActivity.java
app/src/main/java/cn/bsd/learn/bsdiff/sample/utils/: UriParseUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
